--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midili.eg | An Egypitan Cloth Brand</title>
-    <link rel="icon" href="img/logo.PNG" type="image/x-icon">
+    <link rel="icon" href="logo.PNG" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         * {
@@ -324,7 +324,7 @@ nav a:hover::after {
 
     <header>
         <div class="brand">
-            <img src="img/logo.PNG">
+            <img src="logo.PNG">
         </div>
 
         <nav>
@@ -348,7 +348,7 @@ nav a:hover::after {
 
     <div class="content">
         <div class="product">
-            <img src="img/tshirthustle.jpg" alt="Product 1">
+            <img src="tshirthustle.jpg" alt="Product 1">
             <div class="product-info">
                 <h2>Product 1</h2>
                 <p>$29.99</p>
@@ -381,7 +381,7 @@ nav a:hover::after {
     <div class="footer">
         <div class="container">
             <div class="column brand">
-                <img src="img/BGC.png" alt="Brand Icon">
+                <img src="BGC.png" alt="Brand Icon">
                 <h1>Blue GC</h1>
             </div>
             <div class="column">
@@ -406,9 +406,9 @@ nav a:hover::after {
             </div>
         </div>
         <div class="column social">
-            <a href="#" class="social2"><img src="img/insta.png" alt="Instagram"></a>
-            <a href="discord.gg/jZ3p2FntzB" class="social2"><img src="img/discord.png" alt="Discord"></a>
-            <a href="youtube.com/@priveegame?si=pP0lBSdcNaYqLUy0" class="social2"><img src="img/Youtube.png" alt="YouTube"></a>
+            <a href="#" class="social2"><img src="insta.png" alt="Instagram"></a>
+            <a href="discord.gg/jZ3p2FntzB" class="social2"><img src="discord.png" alt="Discord"></a>
+            <a href="youtube.com/@priveegame?si=pP0lBSdcNaYqLUy0" class="social2"><img src="Youtube.png" alt="YouTube"></a>
         </div>
         <div class="copyright">
             &copy; 2019 - 2024 Blue GC. MIDILI.EG is not a trademark or a product made by Blue GC. All Rights Reserved
