--- a/productview.html
+++ b/productview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hustle T-Shirt</title>
-    <link rel="icon" href="img/logo.PNG" type="image/x-icon">
+    <link rel="icon" href="logo.PNG" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
 
@@ -602,7 +602,7 @@ nav a:hover::after {
 
     <header id="headerr">
         <div class="brand">
-            <img src="img/logo.PNG">
+            <img src="logo.PNG">
         </div>
 
         <nav>
@@ -683,13 +683,13 @@ nav a:hover::after {
     
 <div class="container">
     <div class="image-nav">
-        <img src="img/tshirthustle.jpg" alt="Image 1" class="active" onclick="changeImage('img/tshirthustle.jpg')">
-        <img src="img/BCH.jpg" alt="Image 2" onclick="changeImage('img/BCH.jpg')">
+        <img src="tshirthustle.jpg" alt="Image 1" class="active" onclick="changeImage('tshirthustle.jpg')">
+        <img src="BCH.jpg" alt="Image 2" onclick="changeImage('BCH.jpg')">
         <img src="image3.jpg" alt="Image 3" onclick="changeImage('image3.jpg')">
         <img src="image4.jpg" alt="Image 4" onclick="changeImage('image4.jpg')">
     </div>
     <div class="main-image">
-        <img src="img/tshirthustle.jpg" alt="Main Image" id="mainImage" onclick="openModal()">
+        <img src="tshirthustle.jpg" alt="Main Image" id="mainImage" onclick="openModal()">
     </div>
     <div class="details">
         <h1>Hustle </h1>
@@ -736,8 +736,8 @@ nav a:hover::after {
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <div class="image-nav">
-            <img src="img/tshirthustle.jpg" alt="Image 1" class="active" onclick="changeModalImage('img/tshirthustle.jpg')">
-            <img src="img/BCH.jpg" alt="Image 2" onclick="changeModalImage('img/BCH.jpg')">
+            <img src="tshirthustle.jpg" alt="Image 1" class="active" onclick="changeModalImage('tshirthustle.jpg')">
+            <img src="BCH.jpg" alt="Image 2" onclick="changeModalImage('BCH.jpg')">
             <img src="image3.jpg" alt="Image 3" onclick="changeModalImage('image3.jpg')">
             <img src="image4.jpg" alt="Image 4" onclick="changeModalImage('image4.jpg')">
         </div>
@@ -749,7 +749,7 @@ nav a:hover::after {
 <div class="footer">
     <div class="container">
         <div class="column brand2">
-            <img src="img/bgcWhite.png" style="transform: translateY(-5PX);" alt="Brand Icon">
+            <img src="bgcWhite.png" style="transform: translateY(-5PX);" alt="Brand Icon">
             <h1>Blue GC</h1>
         </div>
         <div class="column">
@@ -780,8 +780,8 @@ nav a:hover::after {
         </div>
     </div>
     <div class="column social">
-        <a href="#" class="social2"><img src="img/insta.png" alt="Instagram"></a>
-        <a href="#" class="social2"><img src="img/tiktok.png" alt="Tiktok"></a>
+        <a href="#" class="social2"><img src="insta.png" alt="Instagram"></a>
+        <a href="#" class="social2"><img src="tiktok.png" alt="Tiktok"></a>
     </div>
     <div class="copyright">
         &copy; 2019 - 2024 Blue GC. 2024 MIDILI.EG is not a trademark or a product made by Blue GC. All Rights Reserved
