--- a/adminconsole.html
+++ b/adminconsole.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Console</title>
-    <link rel="icon" href="img/bgcWhite.png" type="image/x-icon">
+    <link rel="icon" href="bgcWhite.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
@@ -718,19 +718,19 @@
 
     <div class="cct">
         <div class="logo">
-            <img style="width: 25px;" src="img/bgcWhite.png">
+            <img style="width: 25px;" src="bgcWhite.png">
         </div>
         <span style="color: white; font-weight: bold; margin-left: 10px; font-size: 18px; transform: translateY(5px);">Blue GC</span>
     </div>
 
     <div class="top-bar" id="headerr">
         <i class="fas fa-bars hamburger" onclick="toggleSidebar()"></i>
-        <h3 style="margin-left: 10px;"><img src="img/logo.PNG" style="width: 50px; margin: 0 10px;"> Admin Console <span class="bttag">Beta</span></h3>
+        <h3 style="margin-left: 10px;"><img src="logo.PNG" style="width: 50px; margin: 0 10px;"> Admin Console <span class="bttag">Beta</span></h3>
     </div>
 
     <div class="admin-container">
         <div class="sidebar collapsed" id="sidebar">
-            <div class="logo"><img src="img/bgcWhite.png"></div>
+            <div class="logo"><img src="bgcWhite.png"></div>
             <h3 style="text-align: center; display: none;">Midili Admin Console</h3>
             <ul>
                 <li class="active" onclick="openTab('dashboard', this)"><i class="fas fa-home"></i><span>Dashboard</span></li>
@@ -1030,7 +1030,7 @@
     <div class="footer">
         <div class="container">
             <div class="column brand2">
-                <img src="img/_BGC black.png" style="transform: translateY(-5PX);" alt="Brand Icon">
+                <img src="_BGC black.png" style="transform: translateY(-5PX);" alt="Brand Icon">
                 <h1>Blue GC</h1>
             </div>
             <div class="column">
@@ -1061,8 +1061,8 @@
             </div>
         </div>
         <div class="column social">
-            <a href="#" class="social2"><img src="img/insta.png" alt="Instagram"></a>
-            <a href="#" class="social2"><img src="img/tiktok.png" alt="Tiktok"></a>
+            <a href="#" class="social2"><img src="insta.png" alt="Instagram"></a>
+            <a href="#" class="social2"><img src="tiktok.png" alt="Tiktok"></a>
         </div>
         <div class="copyright">
             &copy; 2019 - 2024 Blue GC. 2024 MIDILI.EG is not a trademark or a product made by Blue GC. All Rights Reserved
