--- a/signin.html
+++ b/signin.html
@@ -115,7 +115,7 @@
 <body>
 
 <div class="login-container">
-    <img src="img/logo.PNG" style="width: 70px; scale: 2; user-select: none;">
+    <img src="logo.PNG" style="width: 70px; scale: 2; user-select: none;">
     <h2>Login</h2>
     <form id="loginForm">
         <input type="email" id="email" placeholder="Email" required>
